# bank-security

./: .env.example  .gitignore  CHECKLIST_LIVRAISON.md  CLAUDE.md  Dockerfile.test  INSTALL_DOCKER.md  Makefile  RAPPORT_AUDIT.md  README.md  RECAP.md  SETUP_STATUS.md  check-setup.ps1  check-setup.sh  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  pr-checks.yml
SGF_generateur_de_fraudes-main/: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  Dockerfile.api  Dockerfile.llm  EXAMPLES.md  Makefile  QUICKSTART.md  README.md  SUPABASE_SETUP.md  cli.py  docker-compose.yml  generate_rag.py  init_db_auto.py  requirements.txt
SGF_generateur_de_fraudes-main/app/: __init__.py  (+2 more)
docs/: ARCHITECTURE-PC-Warren.md  ARCHITECTURE.md  AUDIT_LOGS_PROOF.md  FLUX-DONNEES.md  GUIDE-RAPIDE-PC-Warren.md  GUIDE-RAPIDE.md  INDEX-PC-Warren.md  INDEX.md  IP_GEOLOCATION.md  LOAD_TEST_RESULTS.md  MAKEFILE_GUIDE.md  METRICS.md  POINT_PROFESSEURS.md  RGPD_COMPLIANCE.md  SCRIPTS_GUIDE.md  SESSIONS.md  SIX_PAGER.md  SIX_PAGER_IP_GEOLOCATION.md  SIX_PAGER_ML_MODEL.md  TECHNICAL_DESIGN.md  database-schema-PC-Warren.md  database-schema.md  soutenance.md
scripts/: anonymize_old_data.py  db-helper.sh  docker-helper.sh  k8s-helper.sh  kafka-helper.sh  ml-helper.sh  redis-helper.sh  retrain.sh  setup_dataset.sh  test_kaggle_full.sh  train_fraud_model_ieee.py  train_fraud_model_kaggle.py  train_fraud_model_mvp.py
tests/: __init__.py  conftest.py  test_audit_hmac.py
(+138 files in other folders)
