[project]
name = "fraudguard-ai"
version = "1.0.0"
description = "Real-time fraud detection engine for payment transactions"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Docker services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (excluded by default)",
    "model: ML model tests",
    "api: API endpoint tests",
    "database: Database tests (require PostgreSQL)",
    "redis: Redis tests (require Redis)",
    "kafka: Kafka tests (require Kafka)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["services"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
